
Table user_account {
    id long [primary key]
    userName varchar
    password varchar
}

Table user_account_participant_lnk {
    id long [primary key]
    fk_user_account_id long
    fk_participant_id long
}

Table todo {
    id long [primary key]
    fk_user_id long
    name varchar
    description varchar
    status varchar
}

Table todo_item {
    id long [primary key]
    fk_todo_id long
    name varchar
    description varchar
    status varchar
    category varchar
    action varchar
    assignedTo varchar
    approvalRequired integer
    approved integer
}

Table todo_participant {
    id long [primary key]
    name varchar
    email varchar
}

Table todo_participant_lnk {
    id long [primary key]
    fk_todo_id long
    fk_todo_participant_id long
}

Table todo_item_approval {
    id long [primary key]
    fk_todo_item_id long
    fk_todo_participant_id long
    approved boolean
}

Ref: todo.fk_user_id > user_account.id  // many-to-one
Ref: todo_item.fk_todo_id > todo.id  // many-to-one
Ref: todo_participant_lnk.fk_todo_id > todo.id // many to one
Ref: todo_participant_lnk.fk_todo_participant_id > todo_participant.id // many to one
Ref: todo_item_approval.fk_todo_item_id > todo_item.id // many to one
Ref: todo_item_approval.fk_todo_participant_id > todo_participant.id // many to one
